--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
     {% block extra_meta %}
         <meta name="description" content="Drift Cult – Minimalist Surf, Skate & Outdoor Apparel for Real Ones.">
         <meta name="author" content="Drift Cult">
-        <link rel="icon" type="image/png" href="{% static 'images/favicon.png' %}">
-    {% endblock %}
+        <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+        {% endblock %}
 
     <!-- Bootstrap CSS -->
     {% block corecss %}
