--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -19,11 +19,11 @@
     <button type="submit" class="btn btn-dark">Apply</button>
   </form>
 
-  <!-- Search Bar -->
+  {% comment %} <!-- Search Bar -->
   <form method="GET" class="form-inline justify-content-center mb-4">
     <input type="text" name="q" class="form-control mr-2" placeholder="Search products..." value="{{ request.GET.q }}">
     <button type="submit" class="btn btn-dark">Search</button>
-  </form>
+  </form> {% endcomment %}
 
   <!-- Product Grid -->
   <div class="row">
