Move favicon to images folder for collectstatic

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     {% block extra_meta %}
         <meta name="description" content="Drift Cult – Minimalist Surf, Skate & Outdoor Apparel for Real Ones.">
         <meta name="author" content="Drift Cult">
-        <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+        <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
         {% endblock %}
 
     <!-- Bootstrap CSS -->
