--- a/templates/base.html
+++ b/templates/base.html
@@ -45,18 +45,18 @@
     <!-- Navbar -->
     <header class="container-fluid fixed-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Drift Cult</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" 
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="{% url 'product_list' %}">Drift Cult</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="/store/">Shop</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'product_list' %}">Shop</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'view_cart' %}">Cart</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Community</a></li>
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+
             {% if user.is_authenticated %}
               <li class="nav-item"><a class="nav-link" href="{% url 'profile' %}">Profile</a></li>
               <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
@@ -71,16 +71,16 @@
 
     <!-- Messages -->
     <div class="container mt-5 pt-5">
-        {% if messages %}
-            {% for message in messages %}
-                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-                    {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-            {% endfor %}
-        {% endif %}
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        {% endfor %}
+      {% endif %}
     </div>
     
     {% block page_header %}
