--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,14 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a class="nav-link" href="{% url 'product_list' %}">Shop</a></li>
-            <li class="nav-item"><a class="nav-link" href="{% url 'view_cart' %}">Cart</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'view_cart' %}">
+                Cart
+                {% if cart_item_count > 0 %}
+                  <span class="badge badge-light">{{ cart_item_count }}</span>
+                {% endif %}
+              </a>
+            </li>
             <li class="nav-item"><a class="nav-link" href="#">Community</a></li>
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
 
