--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,9 @@
     <!-- Navbar -->
     <header class="container-fluid fixed-top">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'product_list' %}">Drift Cult</a>
+        <a class="navbar-brand" href="{% url 'product_list' %}">
+          <img src="{% static 'images/drift_cult_logo.webp' %}" alt="Drift Cult Logo" height="30">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
         </button>
