--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -8,18 +8,19 @@
   {% if cart_items %}
     <ul class="list-group mb-4">
       {% for item in cart_items %}
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          <div>
+        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+          <div class="col-md-6">
             <strong>{{ item.product_size.product.name }}</strong> 
             <small class="text-muted">(Size: {{ item.product_size.size }})</small>
-            <br>
-            Qty: {{ item.quantity }}
+            <form method="post" action="{% url 'update_cart_quantity' item.id %}" class="form-inline mt-2">
+              {% csrf_token %}
+              <input type="number" name="quantity" value="{{ item.quantity }}" min="1" class="form-control form-control-sm mr-2" style="width: 70px;">
+              <button type="submit" class="btn btn-sm btn-outline-primary">Update</button>
+            </form>
           </div>
-          <div>
+          <div class="col-md-4 text-md-right mt-3 mt-md-0">
             €{{ item.product_size.product.price|floatformat:2 }}
-            <a href="{% url 'remove_from_cart' item.id %}" class="btn btn-sm btn-outline-danger ml-3">
-              Remove
-            </a>
+            <a href="{% url 'remove_from_cart' item.id %}" class="btn btn-sm btn-outline-danger ml-2">Remove</a>
           </div>
         </li>
       {% endfor %}
