--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -25,7 +25,7 @@
     <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
       <div class="card h-100 shadow-sm border-0">
         {% if product.image %}
-          <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+          <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}" onerror="this.onerror=null;this.src='{% static "images/placeholder.png" %}';">
         {% else %}
           <img src="{% static 'images/placeholder.png' %}" class="card-img-top" alt="Placeholder">
         {% endif %}
