--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -22,7 +22,7 @@
     {% for product in products %}
       <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
         <div class="card h-100 shadow-sm border-0">
-          {% if product.image and product.image.storage.exists(product.image.name) %}
+          {% if product.image %}
             <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
           {% else %}
             <img src="{% static 'images/placeholder.png' %}" class="card-img-top" alt="No Image">
