--- a/store/templates/store/shop.html
+++ b/store/templates/store/shop.html
@@ -7,11 +7,13 @@
     {% for product in products %}
       <div class="col-md-4 mb-4">
         <div class="card h-100">
-          {% if product.has_local_image %}
-            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-          {% else %}
-            <img class="card-img-top img-fluid" src="{% static 'images/placeholder.png' %}" alt="{{ product.name }}">
-          {% endif %}
+          <a href="{% url 'product_detail' product.id %}">
+            {% if product.image %}
+              <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+            {% else %}
+              <img class="card-img-top img-fluid" src="{% static 'images/placeholder.png' %}" alt="{{ product.name }}">
+            {% endif %}
+          </a>
           <div class="card-body">
             <h5 class="card-title">{{ product.name }}</h5>
             <p class="card-text">€{{ product.price }}</p>
@@ -21,6 +23,32 @@
       </div>
     {% endfor %}
   </div>
+
+  {% if is_paginated %}
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center">
+        {% if page_obj.has_previous %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">&laquo;</a>
+          </li>
+        {% endif %}
+
+        {% for num in paginator.page_range %}
+          {% if page_obj.number == num %}
+            <li class="page-item active"><a class="page-link" href="#">{{ num }}</a></li>
+          {% else %}
+            <li class="page-item"><a class="page-link" href="?page={{ num }}">{{ num }}</a></li>
+          {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+          <li class="page-item">
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}">&raquo;</a>
+          </li>
+        {% endif %}
+      </ul>
+    </nav>
+  {% endif %}
 </div>
 {% endblock %}
 
@@ -33,12 +61,12 @@
   });
 </script>
 
-<!-- Newsletter Modal HTML -->
+<!-- Newsletter Modal -->
 <div class="modal fade" id="newsletterModal" tabindex="-1" role="dialog" aria-labelledby="newsletterModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content p-4 bg-dark text-white">
       <div class="modal-header border-0">
-        <h5 class="modal-title" id="newsletterModalLabel">Join The Cult! Get 10% discount on your first order!</h5>
+        <h5 class="modal-title" id="newsletterModalLabel">Join The Cult! Get 10% off your first order!</h5>
         <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
