--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -23,10 +23,11 @@
       <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
         <div class="card h-100 shadow-sm border-0">
           {% if product.image %}
-            <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
           {% else %}
-            <img src="{% static 'images/placeholder.png' %}" class="card-img-top" alt="No Image">
+            <img class="card-img-top img-fluid" src="{% static 'images/placeholder.png' %}" alt="{{ product.name }}">
           {% endif %}
+
 
           <div class="card-body d-flex flex-column">
             <h5 class="card-title">{{ product.name }}</h5>
